	* parseArgs.c: Change the single-match flags to adjust a function pointer instead of a flag.
	* settings.c: Implement the single- or multi-search as a functon pointer.
	* settings.h: Remove single_search flag. Implement as a function pointer.
	* TODO: Mention difference in output on tested directory as a bug.

2015-12-18  SilverNexus
	* parseArgs.c: Added argument pasing for single-line match feature
	* settings.c: Refactored byte for stdout printing as flags byte
	* search.c: Added check for single-match mode.
	* output.c: Refactored stdout printing check to use flags byte.
	* settings.h: Refactored stdout printing byte as flags byte. Defined flag values.
	* README: Add information about -1 and --single-match flags.

2015-12-17  SilverNexus
	* parseArgs.c: Optimize arg checking andd fix segfault on bad flags and no search string.

2015-12-15  SilverNexus
	* main.c: Moved output of messages to stderr to make room for stdout output.
	* output.c: Added check for printing to stdout.
	* settings.h: Added flag for printing to stdout.
	* settings.c: Implemented default value (0) for stdout output.
	* parseArgs.c: Added parsing for -O and --stdout flags. Also updated help message.
	* README: Updated usage information.

2015-11-04  SilverNexus
	* main.c: Added signal handling to output results found at SIGINT.
	* output.*: Moved the result output code to its own function.
	* Makefile.am: Add output.c to the build.

2015-11-02  SilverNexus
	* search.c: Implemented support for specific path search exclusions.
	  Then proceeded to refactor path search to allow for specific files to be excluded.
	* settings.h: Added a variable to store the length of the base search path.
	* settings.c: Initialize the search path length to zero.
	* parseArgs.c: Add support for parsing -X flag.
	  Added informtion about -X to the help message
	* main.c: Ensure the base path length is reset between different search root traversals.
	* README: Added information about -X flag.
